# ctrlr

./: .gitignore  README.md  pyproject.toml
.codex/packets/: phase3-index.md
.codex/packets/packet-ctrlr-00-contracts/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-01-trace/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-02-control/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-0201-budget-core/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-0202-seeded/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-0203-mermaid-flow/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-0204-mermaid-calltree/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-0205-tooled-extras/: contract.json
.codex/packets/packet-ctrlr-03-experiment/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-04-viz/: EXEC_PROMPT.md  contract.json
.codex/packets/packet-ctrlr-05-otel/: EXEC_PROMPT.md  contract.json
.github/workflows/: deprecation-gates.yml
courses/inf1250/: README.md
courses/inf2220/: README.md
docs/: ROADMAP.md  basic_usage.md  configuration_and_settings.md  dev_flow.md  eofl-oracle.md  oracle-ctrlr.md  oracle_overview.md
docs/otel_migration/: dependency_matrix.md  replacement_mapping.md  runtime_config.md  tracker.md
integration/tests/: test_deprecation_enforcement.py  test_imports.py  test_oracle_otel_adapters.py  test_oracle_otel_runtime.py  test_otel_schema_contract.py
src/ctrlr/: __init__.py  optional.py
tests/: test_optional_imports.py
tools/: run_packet.py
(+8 files in other folders)
